// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography 2.render test renders correctly 1`] = `
<article
  class="kd-typography"
>
  Typography
</article>
`;

exports[`Typography 2.render test renders correctly 2`] = `
<div
  class="kd-typography"
>
  Paragraph
</div>
`;

exports[`Typography 2.render test renders correctly 3`] = `
<span
  class="kd-typography"
>
  Text
</span>
`;

exports[`Typography 2.render test renders correctly 4`] = `
<h1
  class="kd-typography"
>
  Title
</h1>
`;

exports[`Typography 2.render test renders correctly 5`] = `
<span
  class="kd-typography kd-typography-second"
>
  Typography.Text type
</span>
`;

exports[`Typography 2.render test renders correctly 6`] = `
<span
  class="kd-typography kd-typography-success"
>
  Typography.Text type
</span>
`;

exports[`Typography 2.render test renders correctly 7`] = `
<span
  class="kd-typography kd-typography-warning"
>
  Typography.Text type
</span>
`;

exports[`Typography 2.render test renders correctly 8`] = `
<span
  class="kd-typography kd-typography-danger"
>
  Typography.Text type
</span>
`;

exports[`Typography 2.render test renders correctly 9`] = `
<span
  class="kd-typography kd-typography-assist"
>
  Typography.Text type
</span>
`;

exports[`Typography 2.render test renders correctly 10`] = `
<h1
  class="kd-typography"
>
  Typography.Title level
</h1>
`;

exports[`Typography 2.render test renders correctly 11`] = `
<h2
  class="kd-typography"
>
  Typography.Title level
</h2>
`;

exports[`Typography 2.render test renders correctly 12`] = `
<h3
  class="kd-typography"
>
  Typography.Title level
</h3>
`;
